# multigrid

./: .gitignore  CMakeLists.txt  Makefile  README.md
analysis/: fillin.ipynb  poisson1D.py  poisson_exact_solution.py  restriction.ipynb  stress_direct.py  stress_iterative.py
artifacts/: solution_1d.cpp  solution_1d.h  symbolic.cpp  symbolic.h
benchmark/: bench_cycle.cpp  bench_fused.cpp  bench_multilevel.cpp  bench_omp.cpp  bench_smoother.cpp  bench_step.hpp  bench_vcycle.cpp
examples/: example_convergence.cpp  example_convergence_1d.cpp  example_convergence_2d.cpp  example_cycle_performance.cpp  example_exact_solve.cpp  example_forced_circuit.cpp  example_multilevel_performance.cpp  example_smoother_comparison.cpp  example_stress_direct.cpp
include/: circuit.hpp  direct.hpp  multigrid.hpp  operator.hpp  pointer_variant.hpp  poisson.hpp  poisson1D.hpp  problem.hpp  smoothers.hpp  solvers.hpp  stencil.hpp  utils.hpp  vpointer.hpp
plot/: convergence_history.py  convergence_order.py  csvparser.py  jsonparser.py  problem_scaling.py  solution_plot_1D.py  speedup.py  stress_direct.py
src/: circuit.cpp  main.cpp  multigrid.cpp  operator.cpp  poisson.cpp  poisson1D.cpp  smoothers.cpp  solvers.cpp  stencil.cpp  utils.cpp
sycl/: main.sycl.cpp
test/: convergence_history.cpp  test_compute_residual.cpp  test_cycle_spec.cpp  test_eigen_interop.cpp  test_operator_restriction.cpp  test_restriction.cpp  test_sparse.cpp  test_sparse_repr.cpp  test_stencil.cpp  test_stress_direct.cpp
